--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactform-kit",
+  "name": "ornament-form-kit",
   "version": "0.0.0",
   "description": "React Form Components",
   "main": "index.js",
