--- a/package.json
+++ b/package.json
@@ -59,12 +59,13 @@
     "prop-types": "15.6.1",
     "react": "16.3.1",
     "react-dom": "16.3.1",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "classnames": "2.2.5"
   },
   "peerDependencies": {
     "react": "^16.3.x",
-    "react-dom": "^16.3.x",
-    "prop-types": "^15.6.x"
+    "prop-types": "^15.6.x",
+    "classnames": "^2.X.X"
   },
   "browserify": {
     "transform": [
