--- a/package.json
+++ b/package.json
@@ -56,14 +56,16 @@
     "babel-plugin-transform-react-inline-elements": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-syntax-trailing-function-commas": "6.22.0",
-    "prop-types": "15.6.0",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-router-dom": "4.2.2"
+    "prop-types": "15.6.1",
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
+    "react-router-dom": "4.2.2",
+    "classnames": "2.2.5"
   },
   "peerDependencies": {
-    "react": "^16.x.x",
-    "prop-types": "^15.6.x"
+    "react": "^16.3.x",
+    "prop-types": "^15.6.x",
+    "classnames": "^2.X.X"
   },
   "browserify": {
     "transform": [
