--- a/package.json
+++ b/package.json
@@ -59,13 +59,11 @@
     "prop-types": "15.6.1",
     "react": "16.3.1",
     "react-dom": "16.3.1",
-    "react-router-dom": "4.2.2",
-    "classnames": "2.2.5"
+    "react-router-dom": "4.2.2"
   },
   "peerDependencies": {
     "react": "^16.3.x",
-    "prop-types": "^15.6.x",
-    "classnames": "^2.X.X"
+    "prop-types": "^15.6.x"
   },
   "browserify": {
     "transform": [
