--- a/.eslintrc
+++ b/.eslintrc
@@ -57,6 +57,7 @@
       ]
     }],
     "react/default-props-match-prop-types": "off",
+    "react/jsx-one-expression-per-line": "off",
 
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/anchor-has-content": "off",
