--- a/package.json
+++ b/package.json
@@ -57,8 +57,8 @@
     "react-dom": "16.4.1"
   },
   "peerDependencies": {
-    "react": "^16.4.x",
-    "prop-types": "^15.6.x",
+    "react": "^16.x.x",
+    "prop-types": "^15.x.x",
     "memoize-one": "^4.x.x"
   }
 }
