--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "React Form Components",
   "scripts": {
-    "prepublishOnly": "npm run build",
-    "build": "NODE_ENV=production babel src --out-dir lib --copy-files",
-    "preview": "babel preview/src --out-dir preview/lib --copy-files",
-    "start": "npm run build -- --watch & npm run preview -- --watch & gulp & node ./preview/server.js",
-    "test": "npm run build && mocha \"test/**/*.js\"",
-    "lint": "eslint --ext .es,.js --ignore-path .eslintignore --format codeframe ./"
+    "start": "webpack-dev-server",
+    "test": "npm run lint && npm run mocha",
+    "mocha": "mocha",
+    "lint": "eslint --format codeframe ./"
   },
   "repository": {
     "type": "git",
@@ -34,35 +32,27 @@
     "node": "^8.x.x"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/core": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "browserify": "^16.2.3",
+    "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
-    "connect-livereload": "^0.6.1",
-    "eslint": "^5.15.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "express": "^4.16.4",
-    "gulp": "^4.0.0",
-    "livereload": "0.7.0",
-    "memoize-one": "^5.0.0",
-    "mocha": "^6.0.2",
+    "eslint-plugin-react": "^7.13.0",
+    "memoize-one": "^5.0.4",
+    "mocha": "^6.1.4",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1"
   },
   "peerDependencies": {
     "react": "^16.x.x",
     "prop-types": "^15.x.x",
     "memoize-one": "^4.x.x"
-  },
-  "dependencies": {
-    "marked": "^0.6.1"
   }
 }
