--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ornament-form-kit",
   "version": "2.0.0",
   "description": "React Form Components",
+  "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
     "test": "npm run lint && npm run mocha",
