--- a/package.json
+++ b/package.json
@@ -36,14 +36,12 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^1.0.2",
     "chai": "^4.2.0",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "memoize-one": "^5.1.1",
     "mocha": "^6.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
@@ -54,7 +52,9 @@
   },
   "peerDependencies": {
     "react": "^16.x.x",
-    "prop-types": "^15.x.x",
-    "memoize-one": "^5.x.x"
+    "prop-types": "^15.x.x"
+  },
+  "dependencies": {
+    "memoize-one": "^5.1.1"
   }
 }
